--- a/projekt/mkdocs.yml
+++ b/projekt/mkdocs.yml
@@ -1,1 +1,7 @@
-site_name: My Docs
+site_name: KawaDlaSzefa
+nav:
+  - Start: index.md
+  - Wprowadzenie: wprowadzenie.md
+  - Rodzaje kawy: rodzaje.md
+theme:
+  name: bootstrap386
