Aktualizacja mkdocs.yml

--- a/projekt/mkdocs.yml
+++ b/projekt/mkdocs.yml
@@ -3,5 +3,6 @@ nav:
   - Start: index.md
   - Wprowadzenie: wprowadzenie.md
   - Rodzaje kawy: rodzaje.md
+  - Dodatki: zczympodac.md
 theme:
   name: bootstrap386
